--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="https://www.w3.org/1999/html">
-<<<<<<< HEAD
 
 <head>
-=======
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<title>Medizen</title>
->>>>>>> 7ea620641d075c4551fc1fddb4050f12bc99850f
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,14 +12,15 @@
   <title>Medizen | ¡Más allá de la medicina convencional!</title>
 
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
 
   <!-- Custom CSS -->
-  <link href="css/lovehub.css" rel="stylesheet">
+  <!--<link href="css/lovehub.css" rel="stylesheet">-->
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- Custom Fonts -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">-->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,9 +34,124 @@
     * https://wrapbootstrap.com/theme/lovehub-WB0T1J69J
     * Copyright 1994-2015 ForBetterWeb.com
     -->
+	<style>
+            body {                  
+					background-image: url(img/background.jpg);
+					-webkit-background-size: 100% 100%;           /* Safari 3.0 */
+					-moz-background-size: 100% 100%;           /* Gecko 1.9.2 (Firefox 3.6) */
+					-o-background-size: 100% 100%;           /* Opera 9.5 */
+					background-size: 100% 100%;           /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
+					-moz-border-image: url(img/background.jpg) 0;
+                }
+           		#contenedor {
+				background:url(img/Back-Whatsapp3.png) no-repeat;
+				left:200px;
+				}
+				#inferior{
+				/*color: #FFF;*/
+				/*background: #000;*/
+				position:absolute; /*El div será ubicado con relación a la pantalla*/
+				left:0px; /*A la derecha deje un espacio de 0px*/
+				right:0px; /*A la izquierda deje un espacio de 0px*/
+				bottom:46%; /*Abajo deje un espacio de 0px*/
+				height:0px; /*alto del div*/
+				z-index:0;
+ 				}
+        </style>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">	
-	<img src="img/web.jpg" width="100%" height="100%" alt=""/>
+	<div class="main-wrapper">			
+			<!-- Start Contact Form -->
+			<section class="contact-form-area">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-lg-12">
+							<div class="section-title text-center">
+								<h1 class="text-white">Estamos mejorando para usted</h1>
+								<p class="text-white"><font size="5%" face="calibri">Muy pronto estará nuevamente activa nuestra Página Web </font></p>
+							</div>
+						</div>
+					</div>
+
+					<div class="container" align="center">
+						<img src="img/Logo4.png" style="max-width:100%;width:auto;height:auto;" alt="Responsive image">
+					</div>							
+				</div>
+			</section>
+			<!-- End Contact Form -->			
+			<!-- Start Footer Widget Area -->
+			<section class="footer-widget-area">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12" align="center">
+							<table border="0" id="contenedor">
+							<tr>
+								<td align="center" width="150">
+									<img src="img/Whatsapp-Logo4.png" style="max-width:100%;width:auto;height:auto;" alt="Responsive image">
+									<font color="white">(591) 79359492<br>&nbsp;</font>
+								</td>
+							</tr>
+						</table>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-3">
+							<div class="single-widget">
+								<div class="desc">
+									<h6 class="title">Santa Cruz</h6>
+									<p><br/>Calle Cañada Strongest<br/> Esquina Platanillos Edif.<br/>SUTO local 5B Planta Baja<br><br>
+										<img src="img/Phone-Logo2.png" style="max-width:100%;width:auto;height:auto;" alt="">
+										(591) 3301353
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="single-widget">
+								<div class="desc">
+									<h6 class="title">La Paz</h6>
+									<div class="contact">
+										<p>Av. 20 de Octubre<br/> Esq. Cap. Castrillo Edificio<br/> Los Cedros #356<br/> Planta baja oficina G5<br/> (Zona San Pedro)<br>
+											<img src="img/Phone-Logo2.png" style="max-width:100%;width:auto;height:auto;" alt="">
+											(591) 2312803
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="single-widget">
+								<div class="desc">
+									<h6 class="title">Cochabamba</h6>
+									<div class="contact">
+										<p><br>Calle Mayor Rocha N°308<br/> esq. Hamiraya lado<br/> Colegio La Salle<br><br>
+											<img src="img/Phone-Logo2.png" style="max-width:100%;width:auto;height:auto;" alt="">
+											(591) 4063643
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3">
+							<div class="single-widget">
+								<div class="desc">
+									<h6 class="title">Oruro</h6>
+									<div class="contact">
+										<p><br>Av. ESPAÑA #640 entre<br/> Soria Galvarro y La Plata
+											<br><br><br>
+											<img src="img/Phone-Logo2.png" style="max-width:100%;width:auto;height:auto;" alt="">
+											(591) 71080502
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>				
+			</section>
+			<!-- End Footer Widget Area -->
+
+		</div>
 </body>
 </html>
