--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     -->
 	<style>
             body {                  
-					background-image: url(img/background.jpg);
-					-webkit-background-size: 100% 100%;           /* Safari 3.0 */
-					-moz-background-size: 100% 100%;           /* Gecko 1.9.2 (Firefox 3.6) */
-					-o-background-size: 100% 100%;           /* Opera 9.5 */
-					background-size: 100% 100%;           /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
-					-moz-border-image: url(img/background.jpg) 0;
+			background-attachment: fixed;
+					background-image: url("img/Background.jpg");					
+					background-position: top center;
+					background-repeat: no-repeat;
+					background-size: cover;					
+					position: relative;
                 }
            		#contenedor {
 				background:url(img/Back-Whatsapp3.png) no-repeat;
