--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<style>
             body {                  
 			background-attachment: fixed;
-			background-image: url("img/Background.jpg");					
+			background-image: url(img/Background.jpg);					
 			background-position: top center;
 			background-repeat: no-repeat;
 			background-size: cover;					
