--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 			-moz-background-size: 100% 100%;           /* Gecko 1.9.2 (Firefox 3.6) */
 			-o-background-size: 100% 100%;           /* Opera 9.5 */
 			background-size: cover;           /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
+			background-position: top center;
+			background-repeat: no-repeat;
+		    	position: relative;
 			-moz-border-image: url(img/background.jpg) 0;
                 }
            		#contenedor {
