--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<style>
             body {                  
 			background-image: url(img/background.jpg);
-			
+			background-attachment: fixed;
 			background-size: cover;           /* Gecko 2.0 (Firefox 4.0) and other CSS3-compliant browsers */
 			background-position: top center;
 			background-repeat: no-repeat;
