--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body:before {
-          background: url(img/background2.jpg) no-repeat center center;
+          background: url(img/Background2.jpg) no-repeat center center;
           content: "";
           display: block;
           position: fixed;
