--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
           <li class="menu-extra hide">
             <a class="page-scroll tipografia_5" href="#treatments">Tratamientos</a>
           </li>
-          <li>
-            <a class="page-scroll tipografia_5" href="#about">Conócenos</a>
+          <li class="example">
+            <a class="page-scroll tipografia_5" href="#about"><span style="color:white;">Conócenos</span></a>
           </li>
           <li>
-            <a class="page-scroll tipografia_5" href="#team">Nuestro equipo</a>
+            <a class="page-scroll tipografia_5" href="#team"><span style="color:white;">Nuestro equipo</span></a>
           </li>
           <li>
-            <a class="page-scroll tipografia_5" href="#contact">Contáctos</a>
+            <a class="page-scroll tipografia_5" href="#contact"><span style="color:white;">Contáctos</span></a>
           </li>          
             <li>
               <a href="https://www.facebook.com/MedizenConsultorio/" class="social-link" target="_blank"><span class="fa-stack"><img  src="img/Facebook-Icon.png" alt="" style="height: 29px;"></span></a>
@@ -227,11 +227,11 @@
   <!-- About Section -->
   <section id="about" class="container-fluid">
     <div class="row">
-      <div class="azul" style="position: absolute; padding: 20px; margin: -15px; top: 120px; z-index: 90; background-color: #092980; position: absolute; padding: 16px;">
+      <div class="azul" style="position: absolute; padding: 20px; margin: -15px; top: 89px; z-index: 90; background-color: #092980; position: absolute; padding: 16px;">
         </div>
         <div class="azul2" style="position: absolute; padding: 20px; margin: -15px; top: 68px; z-index: 90; background-color: #092980; position: absolute; padding: 16px;">
         </div>
-      <div class="col-sm-6 split-padding3">        
+      <div class="col-sm-6 split-padding3">
         <h2 class="headerline tipografia_1">QUIENES SOMOS</h2>        
         <div class="tipografia_2">
           Medizen nació con un firme propósito <strong>“Mejorar la calidad de vida de nuestros pacientes”.</strong><br><br>
@@ -249,7 +249,7 @@
   <section id="services" class="container-fluid">
     <img class="item-left" src="img/background-orange-left.png" alt="">
     <img class="item-right" src="img/background-orange-right.png" alt="">
-    <div class="row"><br><br>
+    <div class="row">
       <h2 class="headerline-orange orange tipografia_5">SERVICIOS</h2>
       <!--<div class="col-sm-6 split-padding6">-->
         <div class="col-md-6" align="center">
@@ -335,7 +335,7 @@
   <section id="treatments" class="container-fluid">
     <img class="item-left" src="img/background-left.png" alt="">
     <img class="item-right" src="img/background-right.png" alt="">
-    <div class="row"><br><br>
+    <div class="row">
       <h2 class="tipografia_7">ENFERMEDADES MAS TRATADAS</h2>
       <div class="col-sm-6">        
         <p><img src="img/Artrosis-Medizen.png" class="img-responsive center-block" alt="Artrosis"></p>
@@ -418,7 +418,7 @@
   <section id="team" class="container-fluid text-center">
     <img class="item-left" src="img/background-green-left.png" alt="">
     <img class="item-right" src="img/background-green-right.png" alt="">
-    <div class="row"><br><br><br>
+    <div class="row">
       <div class="tipografia_8 green">NUESTROS PROFESIONALES</div>
       <p class="tipografia_9" align="justify">Contamos con personal Profesional Médico calificado y con un alto estándar de práctica de ética médica. Nuestro Profesionales Médicos entra constantemente en capacitaciones para mantenerse al tanto de los avances en los diferentes servicios que
         Ofrecemos.
@@ -500,27 +500,22 @@
   <!-- Contact Section -->
   <section id="contact" class="container-fluid text-center">
     <!--<div class="overlay"></div>--><!--Cambia el tono de color de la imagen contacto-->
-    <div class="row" align="center"><br><br><br>
+    <div class="row" align="center">
       <!--<h2 class="headerline">Contáctanos</h2>-->
       <!--<p>Escríbenos tus dudas y consultas, estamos dispuestos a ayudarte</p>-->
       <div class="dibujoRec"><h3 class="tipografia_6"><a href="https://api.whatsapp.com/send?phone=59179359492" target="_blank" title="Ir a Whatssap" style="color:#ffff;"><i class="fa fa-whatsapp"></i> (591) 79359492 </a></h3></div>
-      <!-- <p><i class="fa fa-envelope"></i> info@medizencochabamba.com </p> -->
-      <!--<ul class="list-inline lead">
-        <li><a href="https://www.facebook.com/MedizenConsultorio/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
-        <li><a href="https://www.youtube.com/channel/UCFM90BVa5tzOjcyNkZJhuSQ"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-youtube fa-stack-1x fa-inverse"></i></span></a></li>
-        <li><a href="https://www.instagram.com/medizen.bolivia/"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a></li>
-        
-      </ul>-->
     </div>
     <br>
     <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-6">
           <h3 class="tipografia_3">Santa Cruz</h3>
-          <div class="tipografia_2"><br>
+          <div class="tipografia_2">
+            &nbsp;&nbsp;&nbsp;&nbsp;<br>
             Calle Cañada Strongest <br>
-            Esquina Platanillos
-            Edif.<br> SUTO local 5B Planta Baja
-          </div><br><br>
+            Esquina Platanillos Edif.<br> 
+            SUTO local 5B Planta Baja<br>
+            &nbsp;
+          </div><br>
           <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 3301353 </div><br><br>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.404066675179!2d-63.189052585118226!3d-17.772697087848744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f1e7e7003526a9%3A0xc66bce8687b273a3!2sMedizen+Santa+Cruz!5e0!3m2!1ses-419!2sbo!4v1539352966399" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
           <!-- <iframe src="contenido1.html" width="400" height="300" frameborder="0" style="border:0" name="opcion1" allowfullscreen></iframe> -->           
@@ -531,8 +526,10 @@
         <h3 class="tipografia_3">La Paz</h3>
         <div class="tipografia_2">
           Av. 20 de Octubre <br>
-          Esq. Cap. Castrillo Edificio<br> Los Cedros # 356 <br>
-          Planta baja oficina G5 <br>(Zona San Pedro)
+          Esq. Cap. Castrillo Edificio<br> 
+          Los Cedros # 356 <br>
+          Planta baja oficina G5 <br>
+          (Zona San Pedro)
         </div><br>
         <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 2312803 </div><br><br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3825.3315535760185!2d-68.12938898513575!3d-16.50935098861027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915f212be423a3bb%3A0x4c4f2d1ed2e2a182!2sMedizen+La+Paz!5e0!3m2!1ses-419!2sbo!4v1539353027971" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>        
@@ -541,10 +538,13 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
         <h3 class="tipografia_3">Cochabamba</h3>
-        <div class="tipografia_2"><br>
+        <div class="tipografia_2">
+          &nbsp;<br>
           Calle Mayor Rocha N°308 <br>
-          Esq. Hamiraya <br> &nbsp;
-        </div><br><br> 
+          Esq. Hamiraya <br> 
+          &nbsp;<br>
+          &nbsp;
+        </div><br>
         <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 4-4063643 </div><br><br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3807.4591782028197!2d-66.16404568534588!3d-17.389737988077215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e3740a5c857f8f%3A0x5553b742d0816c64!2sMedizen+Cochabamba!5e0!3m2!1sen!2sbo!4v1497363290099" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
         <br><br>
@@ -552,9 +552,13 @@
       </div>
       <div class="col-lg-3 col-md-4 col-sm-6">
         <h3 class="tipografia_3">Oruro</h3>
-        <div class="tipografia_2"><br>
-          Avenida España #640 entre<br> Soria Galvarro y La Plata
-        </div><br><br><br>
+        <div class="tipografia_2">
+          &nbsp;<br>
+          Avenida España #640 entre<br> 
+          Soria Galvarro y La Plata<br>
+          &nbsp;<br>
+          &nbsp;
+        </div><br>
         <div class="tipografia_2"><i class="fa fa-phone"></i> (591) 79359492 </div><br><br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3794.9458682082113!2d-67.11978078511528!3d-17.98125528772521!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93e2b1578bffcd1d%3A0xedfdfa686d0e5a54!2sMedizen+Oruro!5e0!3m2!1ses-419!2sbo!4v1539353141384" width="200" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>        
         <br><br>
@@ -572,6 +576,10 @@
   <script src="js/jquery.magnific-popup.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+   <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script> 
+
   <!-- https://nnattawat.github.io/flip/ -->
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js">
   <!-- Plugin JavaScript -->
